// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`radio-input-component a11y overrides: aria-label used when no labelTxt and aria-labelledby not provided (single) 1`] = `
<radio-input-component aria-label="Accept terms" bs-radio="" input-id="single-a11y" name="singleA11y">
  <div class="form-group radios">
    <div class="form-check">
      <input aria-label="Accept terms" class="form-check-input" id="single-a11y" name="singleA11y" type="radio" value="">
      <label class="form-check-label" htmlfor="single-a11y" id="radio-single-label-singleA11y"></label>
    </div>
  </div>
</radio-input-component>
`;

exports[`radio-input-component removes validation message when an option is selected (group) 1`] = `
<radio-input-component bs-radio-group="" group-options="[{&quot;value&quot;:&quot;x&quot;,&quot;labelTxt&quot;:&quot;X&quot;,&quot;inputId&quot;:&quot;radio-x&quot;,&quot;checked&quot;:false,&quot;disabled&quot;:false},{&quot;value&quot;:&quot;y&quot;,&quot;labelTxt&quot;:&quot;Y&quot;,&quot;inputId&quot;:&quot;radio-y&quot;,&quot;checked&quot;:false,&quot;disabled&quot;:false}]" group-title="Validation Clear" name="group2" required="" validation="" validation-msg="Please select one">
  <div class="radio-group radios">
    <div aria-labelledby="radio-group-title-group2" aria-required="true" role="radiogroup">
      <div class="group-title" id="radio-group-title-group2">
        Validation Clear
        <span class="required">
          *
        </span>
      </div>
      <div class="form-group">
        <div class="form-check">
          <input checked="" class="form-check-input" id="radio-x" name="group2" required="" type="radio" value="x">
          <label class="form-check-label" htmlfor="radio-x">
            X
          </label>
        </div>
        <div class="form-check">
          <input class="form-check-input" id="radio-y" name="group2" required="" type="radio" value="y">
          <label class="form-check-label" htmlfor="radio-y">
            Y
          </label>
        </div>
      </div>
    </div>
  </div>
</radio-input-component>
`;

exports[`radio-input-component renders radio group with options (Basic styling) 1`] = `
<radio-input-component basic-radio-group="" group-options="[{&quot;value&quot;:&quot;alpha&quot;,&quot;labelTxt&quot;:&quot;Alpha&quot;,&quot;inputId&quot;:&quot;radio-alpha&quot;,&quot;checked&quot;:false,&quot;disabled&quot;:false},{&quot;value&quot;:&quot;beta&quot;,&quot;labelTxt&quot;:&quot;Beta&quot;,&quot;inputId&quot;:&quot;radio-beta&quot;,&quot;checked&quot;:false,&quot;disabled&quot;:false}]" group-title="Custom Group" name="customGroup">
  <div class="radio-group radios">
    <div aria-labelledby="radio-group-title-customGroup" role="radiogroup">
      <div class="group-title" id="radio-group-title-customGroup">
        Custom Group
      </div>
      <div class="form-group">
        <div class="basic-control basic-radio">
          <input class="basic-control-input" id="radio-alpha" name="customGroup" type="radio" value="alpha">
          <label class="basic-control-label" htmlfor="radio-alpha">
            Alpha
          </label>
        </div>
        <div class="basic-control basic-radio">
          <input class="basic-control-input" id="radio-beta" name="customGroup" type="radio" value="beta">
          <label class="basic-control-label" htmlfor="radio-beta">
            Beta
          </label>
        </div>
      </div>
    </div>
  </div>
</radio-input-component>
`;

exports[`radio-input-component renders radio group with options (Bootstrap styling) and radiogroup semantics 1`] = `
<radio-input-component bs-radio-group="" group-options="[{&quot;value&quot;:&quot;one&quot;,&quot;labelTxt&quot;:&quot;Option One&quot;,&quot;inputId&quot;:&quot;radio-one&quot;,&quot;checked&quot;:false,&quot;disabled&quot;:false},{&quot;value&quot;:&quot;two&quot;,&quot;labelTxt&quot;:&quot;Option Two&quot;,&quot;inputId&quot;:&quot;radio-two&quot;,&quot;checked&quot;:true,&quot;disabled&quot;:false},{&quot;value&quot;:&quot;three&quot;,&quot;labelTxt&quot;:&quot;Option Three&quot;,&quot;inputId&quot;:&quot;radio-three&quot;,&quot;checked&quot;:false,&quot;disabled&quot;:true}]" group-title="Select Option" name="group">
  <div class="radio-group radios">
    <div aria-labelledby="radio-group-title-group" role="radiogroup">
      <div class="group-title" id="radio-group-title-group">
        Select Option
      </div>
      <div class="form-group">
        <div class="form-check">
          <input class="form-check-input" id="radio-one" name="group" type="radio" value="one">
          <label class="form-check-label" htmlfor="radio-one">
            Option One
          </label>
        </div>
        <div class="form-check">
          <input checked="" class="form-check-input" id="radio-two" name="group" type="radio" value="two">
          <label class="form-check-label" htmlfor="radio-two">
            Option Two
          </label>
        </div>
        <div class="form-check">
          <input class="form-check-input" disabled="" id="radio-three" name="group" type="radio" value="three">
          <label class="form-check-label" htmlfor="radio-three">
            Option Three
          </label>
        </div>
      </div>
    </div>
  </div>
</radio-input-component>
`;

exports[`radio-input-component renders single radio (Basic styling) 1`] = `
<radio-input-component basic-radio="" input-id="basic-radio" label-txt="Basic Radio" name="basic">
  <div class="form-group radios">
    <div class="basic-control basic-radio">
      <input aria-labelledby="radio-single-label-basic" class="basic-control-input" id="basic-radio" name="basic" type="radio" value="">
      <label class="basic-control-label" htmlfor="basic-radio" id="radio-single-label-basic">
        Basic Radio
      </label>
    </div>
  </div>
</radio-input-component>
`;

exports[`radio-input-component renders single radio (Bootstrap styling) with accessible label wiring 1`] = `
<radio-input-component bs-radio="" input-id="single-radio" label-txt="Single Radio" name="test">
  <div class="form-group radios">
    <div class="form-check">
      <input aria-labelledby="radio-single-label-test" class="form-check-input" id="single-radio" name="test" type="radio" value="">
      <label class="form-check-label" htmlfor="single-radio" id="radio-single-label-test">
        Single Radio
      </label>
    </div>
  </div>
</radio-input-component>
`;

exports[`radio-input-component shows validation message when no selection is made and required (group) 1`] = `
<radio-input-component bs-radio-group="" group-options="[{&quot;value&quot;:&quot;x&quot;,&quot;labelTxt&quot;:&quot;X&quot;,&quot;inputId&quot;:&quot;radio-x&quot;,&quot;checked&quot;:false,&quot;disabled&quot;:false},{&quot;value&quot;:&quot;y&quot;,&quot;labelTxt&quot;:&quot;Y&quot;,&quot;inputId&quot;:&quot;radio-y&quot;,&quot;checked&quot;:false,&quot;disabled&quot;:false}]" group-title="Validation Test" name="group1" required="" validation="" validation-msg="Please select one">
  <div class="radio-group radios was-validated">
    <div aria-describedby="radio-group-error-group1" aria-invalid="true" aria-labelledby="radio-group-title-group1" aria-required="true" role="radiogroup">
      <div class="group-title" id="radio-group-title-group1">
        Validation Test
        <span class="required">
          *
        </span>
      </div>
      <div class="form-group">
        <div class="form-check">
          <input aria-describedby="radio-group-error-group1" aria-invalid="true" class="form-check-input" id="radio-x" name="group1" required="" type="radio" value="x">
          <label class="form-check-label" htmlfor="radio-x">
            X
          </label>
        </div>
        <div class="form-check">
          <input aria-describedby="radio-group-error-group1" aria-invalid="true" class="form-check-input" id="radio-y" name="group1" required="" type="radio" value="y">
          <label class="form-check-label" htmlfor="radio-y">
            Y
          </label>
        </div>
      </div>
      <div aria-live="polite" class="form-text invalid-feedback" id="radio-group-error-group1" role="alert" style="display: block;">
        Please select one
      </div>
    </div>
  </div>
</radio-input-component>
`;
